--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/infomediadesign/sad-01-2022-project-team-4-multiplayer-game-Backend#readme",
   "dependencies": {
     "express": "^4.17.2",
+    "nanoid": "^3.2.0",
     "socket.io": "^2.4.0"
   },
   "devDependencies": {
